# HomeClimateControl

./: CMakeLists.txt  LICENSE  README.md  README.txt
scripts/: homeclimatecontrol
src/: common.c  common.h  gui.c  gui.h  main.c  main_menu.c  main_menu.h  screensaver.c  screensaver.h  state.c  state.h  temperature_logger.c  temperature_logger.h
